--- a/style.css
+++ b/style.css
@@ -68,15 +68,16 @@ body {
 }
 
 .wrapper {
-    height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto;
+    /* grid-template-rows: auto 1fr auto; */
+    grid-template-rows: 8vh 88vh 4vh;
 }
 
 /* Header */
 
 .header {
+    grid-row: 1 / 2;
     background-color: var(--rhino-dark-1);
     text-align: center;
     padding: 0.5rem 0 0.5rem 0;
@@ -91,6 +92,7 @@ h1 {
 /* Library */
 
 .library-container {
+    grid-row: 2 / 3;
     padding: 2rem 1rem 1rem 2rem;
     display: grid;
     grid-template-columns: 40rem auto;
@@ -104,12 +106,83 @@ h1 {
 .library-grid {
     border: 2px solid var(--reef);
     display: grid;
+    padding: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    grid-auto-rows: min-content;
+    gap: 2rem;
+    overflow-y: auto;
 }
+
+/* Cards */
+.card {
+    border: 2px solid var(--reef);
+    border-radius: 0.65rem;
+    height: 30rem;
+    display: grid;
+    padding: 1rem;
+    grid-template-rows: 10rem 4rem 4rem 1fr 4rem;
+}
+
+.card-actions {
+    grid-row: 5 / 6;
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 6rem 1rem 6rem;
+    justify-content: space-between;
+}
+
+.delete-button {
+    grid-area: 1 / 3 / 2 / 4;
+    justify-self: end;
+    width: 3.5rem;
+}
+
+.switch-container {
+    display: flex;
+    align-items: center;
+}
+
+.read-switch input {
+    position: absolute;
+    opacity: 0;
+}
+
+.read-switch {
+    display: inline-block;
+    font-size: 2.75rem;
+    /* 1 */
+    height: 1em;
+    width: 2em;
+    background: var(--reef);
+    border-radius: 1em;
+}
+
+.read-switch div {
+    height: 0.9em;
+    width: 0.9em;
+    border-radius: 1em;
+    background: var(--rhino);
+    box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
+    -webkit-transition: all 300ms;
+    -moz-transition: all 300ms;
+    transition: all 300ms;
+    margin-top: 0.125rem;
+    margin-left: 0.25rem;
+}
+
+.read-switch input:checked+div {
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+}
+
+
 
 
 /* Footer */
 
 .footer {
+    grid-row: 3 / 4;
     background-color: var(--rhino-dark-1);
     font-size: 2rem;
     text-align: center;
