--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ img {
 }
 
 body {
+    height: 100vh;
     font-family: 'Figtree', sans-serif;
     background-color: var(--rhino-dark-3);
 }
@@ -70,8 +71,7 @@ body {
 .wrapper {
     display: grid;
     grid-template-columns: 1fr;
-    /* grid-template-rows: auto 1fr auto; */
-    grid-template-rows: 8vh 88vh 4vh;
+    grid-template-rows: 6rem calc(100vh - 10rem) 4rem;
 }
 
 /* Header */
@@ -83,8 +83,8 @@ body {
     padding: 0.5rem 0 0.5rem 0;
 }
 
-h1 {
-    font-size: 5rem;
+.header h1 {
+    font-size: 4rem;
     color: var(--reef);
     font-weight: 500;
 }
@@ -108,9 +108,11 @@ h1 {
     display: grid;
     padding: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    grid-auto-rows: min-content;
     gap: 2rem;
+    grid-auto-rows: min-content;
     overflow-y: auto;
+    position: relative;
+    /* position: relative fixed the overflow problem */
 }
 
 /* Cards */
@@ -120,7 +122,32 @@ h1 {
     height: 30rem;
     display: grid;
     padding: 1rem;
-    grid-template-rows: 10rem 4rem 4rem 1fr 4rem;
+    grid-template-rows: 9rem 4rem 4rem 1fr 4rem;
+}
+
+.card h1 {
+    font-size: 2.5rem;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: var(--reef);
+    font-weight: 600;
+}
+
+.card h2 {
+    font-size: 1.75rem;
+    color: var(--reef);
+    font-weight: 400;
+    font-style: italic;
+    align-self: center;
+}
+
+.card p {
+    color: var(--reef);
+    font-size: 1.75rem;
+    align-self: center;
 }
 
 .card-actions {
@@ -140,6 +167,7 @@ h1 {
 .switch-container {
     display: flex;
     align-items: center;
+    padding-left: 0.6rem;
 }
 
 .read-switch input {
@@ -167,7 +195,7 @@ h1 {
     -moz-transition: all 300ms;
     transition: all 300ms;
     margin-top: 0.125rem;
-    margin-left: 0.25rem;
+    margin-left: 0.22rem;
 }
 
 .read-switch input:checked+div {
