--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ body {
     grid-area: 1 / 3 / 2 / 4;
     justify-self: end;
     width: 3.5rem;
+    cursor: pointer;
 }
 
 .switch-container {
