--- a/style.css
+++ b/style.css
@@ -93,18 +93,16 @@ body {
 
 .library-container {
     grid-row: 2 / 3;
-    padding: 2rem 1rem 1rem 2rem;
+    margin: 2rem 1rem 1rem 2rem;
     display: grid;
     grid-template-columns: 40rem auto;
     column-gap: 1rem;
+    border: 2px solid var(--rhino-light-3);
+    border-radius: 0.65rem;
 }
 
-.action-panel {
-    border: 2px solid var(--reef);
-}
 
 .library-grid {
-    border: 2px solid var(--reef);
     display: grid;
     padding: 1rem;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
@@ -179,7 +177,6 @@ body {
 .read-switch {
     display: inline-block;
     font-size: 2.75rem;
-    /* 1 */
     height: 1em;
     width: 2em;
     background: var(--reef);
@@ -230,10 +227,111 @@ body {
 
 /* Form */
 
-form label {
-    font-size: 2rem;
+.action-panel {
+    padding: 1rem;
+}
+
+.form-title {
+    font-size: 5rem;
     font-weight: 500;
     color: var(--reef);
+    text-align: center;
+}
+
+form label {
+    font-size: 2.25rem;
+    font-weight: 500;
+    color: var(--reef);
+}
+
+.form-container {
+    height: fit-content;
+}
+
+form {
+    display: grid;
+    height: 100%;
+    grid-template-rows: repeat(10, auto);
+    gap: 1rem;
+}
+
+input[type='text'],
+input[type='number'] {
+    padding: 1rem;
+    border-radius: 0.65rem;
+    border: 1px solid var(--rhino-light-2);
+    background: var(--rhino-dark-3);
+    width: 32rem;
+    outline: none;
+    color: white;
+    font-size: 2rem;
+}
+
+input[type='number'] {
+    width: 12rem;
+}
+
+input[type='radio'] {
+    box-sizing: border-box;
+    appearance: none;
+    background: var(--rhino-dark-3);
+    outline: 1px solid var(--reef);
+    border: 4px solid var(--rhino-dark-3);
+    width: 1.5rem;
+    height: 1.5rem;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+input[type='radio']:checked {
+    background: var(--reef);
+}
+
+.radio-span label {
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.input-label {
+    font-size: 2.2rem;
+    margin-bottom: -1rem;
+}
+
+form>label:nth-child(1) {
+    margin-top: 2rem;
+}
+
+form>label:nth-child(7) {
+    font-size: 2rem;
+    font-weight: 400;
+    font-style: italic;
+    margin-top: 1rem;
+}
+
+form button {
+    width: 16rem;
+    height: 4rem;
+    font-size: 1.75rem;
+    background-color: var(--rhino-dark-3);
+    color: var(--reef);
+    border: 1px solid var(--reef);
+    border-radius: 0.65rem;
+}
+
+form button:hover {
+    background-color: var(--reef);
+    color: var(--rhino-dark-3);
+    transition: 0.3s;
+}
+
+form button:active {
+    transform: translateY(5px);
+    background-color: var(--reef-dark-2);
+    transition: 0.05s ease-in-out;
 }
 
 
