--- a/style.css
+++ b/style.css
@@ -35,37 +35,30 @@ img {
 /*  */
 
 :root {
-    /* Reef */
-    --reef: #C4FDB8;
+    /* Primary */
+    --rich-black: rgb(2, 27, 26);
+    --dark-green: rgb(3, 34, 33);
+    --bangladesh-green: rgb(3, 98, 76);
+    --mountain-meadow: rgb(44, 194, 149);
+    --caribbean-green: rgb(0, 123, 129);
+    --anti-flash-white: rgb(241, 247, 246);
 
-    --reef-light-1: #BEFFB2;
-    --reef-light-2: #D0FFC4;
-    --reef-light-3: #E2FFD6;
+    /* Secondary */
+    --pine: rgb(6, 48, 43);
+    --basil: rgb(11, 69, 58);
+    --forest: rgb(9, 85, 68);
+    --frog: rgb(23, 135, 109);
+    --mint: rgb(47, 169, 140);
 
-    --reef-dark-1: #B2FBAA;
-    --reef-dark-2: #A0FA9A;
-    --reef-dark-3: #8EFA88;
-    --reef-dark-4: #7CF878;
-    --reef-dark-5: #6AF766;
-
-    /* Rhino */
-    --rhino: #333366;
-
-    --rhino-light-1: #343366;
-    --rhino-light-2: #4D4D80;
-    --rhino-light-3: #666699;
-
-    --rhino-dark-1: #2A2A59;
-    --rhino-dark-2: #21214D;
-    --rhino-dark-3: #181841;
-    --rhino-dark-4: #0F0F34;
-    --rhino-dark-5: #060627;
+    /* Neutral */
+    --stone: rgb(112, 125, 125);
+    --pistachio: rgb(170, 203, 196);
 }
 
 body {
     height: 100vh;
     font-family: 'Figtree', sans-serif;
-    background-color: var(--rhino-dark-3);
+    background-color: var(--rich-black);
 }
 
 .wrapper {
@@ -81,8 +74,8 @@ body {
     display: grid;
     align-items: center;
     grid-template-columns: 7rem auto;
-    background-color: var(--rhino-dark-4);
-    border-bottom: 1px solid var(--rhino-light-3);
+    background-color: var(--dark-green);
+    border-bottom: 1px solid var(--rich-black);
     padding: 0.5rem 0 0.5rem 0;
 }
 
@@ -96,7 +89,7 @@ body {
 .header h1 {
     margin-left: 2rem;
     font-size: 6rem;
-    color: var(--reef);
+    color: var(--anti-flash-white);
     font-weight: 300;
 }
 
@@ -110,12 +103,11 @@ body {
     column-gap: 1rem;
     /* border: 2px solid var(--rhino-light-3); */
     border-radius: 0.65rem;
-    background-color: var(--rhino-dark-3);
+    background-color: var(--pistachio);
 }
 
 
 .library-grid {
-    border: 2px solid var(--rhino-light-3);
     border-radius: 0.65rem;
     display: grid;
     padding: 1rem;
@@ -129,9 +121,8 @@ body {
 
 /* Cards */
 .card {
-    border: 1px solid var(--reef);
-    background-color: var(--rhino-dark-3);
-    border-radius: 0.65rem;
+    border: 1px solid var(--rich-black);
+    box-shadow: inset 0px 0px 230px -4px rgba(196, 253, 184, 0.50);
     height: 30rem;
     display: grid;
     padding: 1rem;
@@ -208,7 +199,7 @@ body {
     font-size: 2.75rem;
     height: 1em;
     width: 2em;
-    background: var(--reef);
+    background: var(--pine);
     border-radius: 1em;
     cursor: pointer;
 }
@@ -217,7 +208,7 @@ body {
     height: 0.9em;
     width: 0.9em;
     border-radius: 1em;
-    background: var(--rhino);
+    background: var(--forest);
     box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
     -webkit-transition: all 300ms;
     -moz-transition: all 300ms;
@@ -233,8 +224,7 @@ body {
 }
 
 .read {
-    background-color: var(--rhino-dark-2);
-    box-shadow: inset 0px 0px 230px -4px rgba(196, 253, 184, 0.50);
+    background-color: var(--pine);
 }
 
 
@@ -242,7 +232,7 @@ body {
 
 * {
     scrollbar-width: thin;
-    scrollbar-color: var(--reef) var(--reef);
+    scrollbar-color: var(--pine) var(--pine);
 }
 
 /* Works on Chrome, Edge, and Safari */
@@ -255,31 +245,32 @@ body {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--reef);
+    background-color: var(--pine);
     border-radius: 20px;
-    border: 3px solid var(--rhino-dark-3);
+    border: 3px solid var(--pistachio);
 }
 
 /* Form */
 
 .action-panel {
     padding: 1rem;
-    background-color: var(--rhino-dark-4);
-    border: 2px solid var(--rhino-light-3);
-    border-radius: 0.65rem;
+    background-color: var(--pine);
+    border: 2px solid var(--basil);
+    border-top-right-radius: 0.65rem;
+    border-bottom-right-radius: 0.65rem;
 }
 
 .form-title {
     font-size: 4rem;
     font-weight: 500;
-    color: var(--reef);
+    color: #C4FDB8;
     text-align: center;
 }
 
 form label {
     font-size: 2.25rem;
     font-weight: 500;
-    color: var(--reef);
+    color: #C4FDB8;
 }
 
 .form-container {
@@ -297,8 +288,8 @@ input[type='text'],
 input[type='number'] {
     padding: 0.8rem;
     border-radius: 0.65rem;
-    border: 1px solid var(--rhino-light-2);
-    background: var(--rhino-dark-4);
+    border: 1px solid var(--rich-black);
+    background: var(--forest);
     width: 32rem;
     outline: none;
     color: white;
@@ -312,9 +303,9 @@ input[type='number'] {
 input[type='radio'] {
     box-sizing: border-box;
     appearance: none;
-    background: var(--rhino-dark-3);
-    outline: 1px solid var(--reef);
-    border: 4px solid var(--rhino-dark-3);
+    background: #C4FDB8;
+    outline: 1px solid var(--rich-black);
+    border: 4px solid #C4FDB8;
     width: 1.5rem;
     height: 1.5rem;
     -webkit-box-sizing: border-box;
@@ -326,7 +317,7 @@ input[type='radio'] {
 }
 
 input[type='radio']:checked {
-    background: var(--reef);
+    background: var(--rich-black);
 }
 
 .radio-span label {
@@ -355,22 +346,22 @@ form button {
     height: 4rem;
     font-size: 1.75rem;
     font-weight: 600;
-    background-color: var(--rhino-dark-2);
-    color: var(--reef-dark-1);
-    border: 1px solid var(--reef);
+    background-color: #C4FDB8;
+    color: var(--rich-black);
+    border: 1px solid var(--rich-black);
     border-radius: 0.65rem;
 }
 
 form button:hover {
-    background-color: var(--rhino-dark-3);
-    color: var(--reef);
+    background-color: var(--mint);
+    color: var(--dark-green);
     transition: 0.3s;
 }
 
 form button:active {
     transform: translateY(5px);
-    background-color: var(--reef-dark-2);
-    color: var(--rhino);
+    background-color: var(--dark-green);
+    color: #C4FDB8;
     transition: 0.05s ease-in-out;
 }
 
@@ -380,11 +371,11 @@ form button:active {
 
 .footer {
     grid-row: 3 / 4;
-    background-color: var(--rhino-dark-4);
-    border-top: 1px solid var(--rhino-light-3);
+    background-color: var(--dark-green);
+    border-top: 1px solid var(--rich-black);
     font-size: 2rem;
     text-align: center;
-    color: var(--reef);
+    color: var(--anti-flash-white);
     padding: 0.5rem;
     display: grid;
     grid-template-columns: 15rem 3rem;
