--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /*  */
 html {
-    box-sizing: border-box;
-    font-size: 16px;
-    font-size: 62.5%;
+  box-sizing: border-box;
+  font-size: 16px;
+  font-size: 62.5%;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body,
@@ -23,440 +23,435 @@ h6,
 p,
 ol,
 ul {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /*  */
 
 :root {
-    /* Reef */
-    --reef: #C4FDB8;
+  /* Reef */
+  --reef: #c4fdb8;
 
-    --reef-light-1: #BEFFB2;
-    --reef-light-2: #D0FFC4;
-    --reef-light-3: #E2FFD6;
+  --reef-light-1: #beffb2;
+  --reef-light-2: #d0ffc4;
+  --reef-light-3: #e2ffd6;
 
-    --reef-dark-1: #B2FBAA;
-    --reef-dark-2: #A0FA9A;
-    --reef-dark-3: #8EFA88;
-    --reef-dark-4: #7CF878;
-    --reef-dark-5: #6AF766;
+  --reef-dark-1: #b2fbaa;
+  --reef-dark-2: #a0fa9a;
+  --reef-dark-3: #8efa88;
+  --reef-dark-4: #7cf878;
+  --reef-dark-5: #6af766;
 
-    /* Rhino */
-    --rhino: #333366;
+  /* Rhino */
+  --rhino: #333366;
 
-    --rhino-light-1: #343366;
-    --rhino-light-2: #4D4D80;
-    --rhino-light-3: #666699;
+  --rhino-light-1: #343366;
+  --rhino-light-2: #4d4d80;
+  --rhino-light-3: #666699;
 
-    --rhino-dark-1: #2A2A59;
-    --rhino-dark-2: #21214D;
-    --rhino-dark-3: #181841;
-    --rhino-dark-4: #0F0F34;
-    --rhino-dark-5: #060627;
+  --rhino-dark-1: #2a2a59;
+  --rhino-dark-2: #21214d;
+  --rhino-dark-3: #181841;
+  --rhino-dark-4: #0f0f34;
+  --rhino-dark-5: #060627;
 }
 
 body {
-    height: 100vh;
-    font-family: 'Figtree', sans-serif;
-    background-color: var(--rhino-dark-3);
+  height: 100vh;
+  font-family: "Figtree", sans-serif;
+  background-color: var(--rhino-dark-3);
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 10rem calc(100vh - 14rem) 4rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 10rem calc(100vh - 14rem) 4rem;
 }
 
 /* Header */
 
 .header {
-    grid-row: 1 / 2;
-    display: grid;
-    align-items: center;
-    grid-template-columns: 7rem auto;
-    background-color: var(--rhino-dark-4);
-    border-bottom: 1px solid var(--rhino-light-3);
-    padding: 0.5rem 0 0.5rem 0;
+  grid-row: 1 / 2;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 7rem auto;
+  background-color: var(--rhino-dark-4);
+  border-bottom: 1px solid var(--rhino-light-3);
+  padding: 0.5rem 0 0.5rem 0;
 }
 
 .logo {
-    width: 5rem;
-    margin-left: 2rem;
-    margin-top: 2rem;
-    justify-self: center;
+  width: 5rem;
+  margin-left: 2rem;
+  margin-top: 2rem;
+  justify-self: center;
 }
 
 .header h1 {
-    margin-left: 2rem;
-    font-size: 6rem;
-    color: var(--reef);
-    font-weight: 300;
+  margin-left: 2rem;
+  font-size: 6rem;
+  color: var(--reef);
+  font-weight: 300;
 }
 
 /* Library */
 
 .library-container {
-    grid-row: 2 / 3;
-    margin: 2rem 1rem 2rem 1rem;
-    display: grid;
-    grid-template-columns: 40rem auto;
-    column-gap: 1rem;
-    /* border: 2px solid var(--rhino-light-3); */
-    border-radius: 0.65rem;
-    background-color: var(--rhino-dark-3);
+  grid-row: 2 / 3;
+  margin: 2rem 1rem 2rem 1rem;
+  display: grid;
+  grid-template-columns: 40rem auto;
+  column-gap: 1rem;
+  /* border: 2px solid var(--rhino-light-3); */
+  border-radius: 0.65rem;
+  background-color: var(--rhino-dark-3);
 }
 
-
 .library-grid {
-    border: 2px solid var(--rhino-light-3);
-    border-radius: 0.65rem;
-    display: grid;
-    padding: 1rem;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    gap: 2rem;
-    grid-auto-rows: min-content;
-    overflow-y: auto;
-    position: relative;
-    /* position: relative fixed the overflow problem */
+  border: 2px solid var(--rhino-light-3);
+  border-radius: 0.65rem;
+  display: grid;
+  padding: 1rem;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  gap: 2rem;
+  grid-auto-rows: min-content;
+  overflow-y: auto;
+  position: relative;
+  /* position: relative fixed the overflow problem */
 }
 
 /* Cards */
 .card {
-    border: 1px solid var(--reef);
-    background-color: var(--rhino-dark-3);
-    border-radius: 0.65rem;
-    height: 30rem;
-    display: grid;
-    padding: 1rem;
-    grid-template-rows: 9rem 4rem 4rem 1fr 2rem 4rem;
+  border: 1px solid var(--reef);
+  background-color: var(--rhino-dark-3);
+  border-radius: 0.65rem;
+  height: 30rem;
+  display: grid;
+  padding: 1rem;
+  grid-template-rows: 9rem 4rem 4rem 1fr 2rem 4rem;
 }
 
 .card h1 {
-    font-size: 2.5rem;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    color: var(--reef);
-    font-weight: 600;
+  font-size: 2.5rem;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: var(--reef);
+  font-weight: 600;
 }
 
 .card h2 {
-    font-size: 1.75rem;
-    color: var(--reef);
-    font-weight: 400;
-    font-style: italic;
-    align-self: center;
+  font-size: 1.75rem;
+  color: var(--reef);
+  font-weight: 400;
+  font-style: italic;
+  align-self: center;
 }
 
 .page-text {
-    color: var(--reef);
-    font-size: 1.75rem;
-    align-self: center;
+  color: var(--reef);
+  font-size: 1.75rem;
+  align-self: center;
 }
 
 .card-actions {
-    grid-row: 6 / 7;
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 6rem 1rem 6rem;
-    justify-content: space-between;
+  grid-row: 6 / 7;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 6rem 1rem 6rem;
+  justify-content: space-between;
 }
 
 .read-text {
-    color: var(--reef);
-    grid-row: 5 / 6;
-    font-size: 1.5rem;
-    font-weight: 700;
-    pointer-events: none;
-    margin-left: 0.8rem;
+  color: var(--reef);
+  grid-row: 5 / 6;
+  font-size: 1.5rem;
+  font-weight: 700;
+  pointer-events: none;
+  margin-left: 0.8rem;
 }
 
 .delete-button {
-    grid-area: 1 / 3 / 2 / 4;
-    justify-self: end;
-    width: 3.5rem;
-    cursor: pointer;
-    transition: 0.2s;
+  grid-area: 1 / 3 / 2 / 4;
+  justify-self: end;
+  width: 3.5rem;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 .delete-button:hover {
-    transform: scale(110%);
+  transform: scale(110%);
 }
 
 .switch-container {
-    display: flex;
-    align-items: center;
-    padding-left: 0.6rem;
+  display: flex;
+  align-items: center;
+  padding-left: 0.6rem;
 }
 
 .read-switch input {
-    position: absolute;
-    opacity: 0;
+  position: absolute;
+  opacity: 0;
 }
 
 .read-switch {
-    display: inline-block;
-    font-size: 2.75rem;
-    height: 1em;
-    width: 2em;
-    background: var(--reef);
-    border-radius: 1em;
-    cursor: pointer;
+  display: inline-block;
+  font-size: 2.75rem;
+  height: 1em;
+  width: 2em;
+  background: var(--reef);
+  border-radius: 1em;
+  cursor: pointer;
 }
 
 .read-switch div {
-    height: 0.9em;
-    width: 0.9em;
-    border-radius: 1em;
-    background: var(--rhino);
-    box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    transition: all 300ms;
-    margin-top: 0.125rem;
-    margin-left: 0.22rem;
+  height: 0.9em;
+  width: 0.9em;
+  border-radius: 1em;
+  background: var(--rhino);
+  box-shadow: 0 0.1em 0.3em rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  transition: all 300ms;
+  margin-top: 0.125rem;
+  margin-left: 0.22rem;
 }
 
-.read-switch input:checked+div {
-    -webkit-transform: translate3d(100%, 0, 0);
-    -moz-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
+.read-switch input:checked + div {
+  -webkit-transform: translate3d(100%, 0, 0);
+  -moz-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
 }
 
 .read {
-    background-color: var(--rhino-dark-2);
-    box-shadow: inset 0px 0px 230px -4px rgba(196, 253, 184, 0.50);
+  background-color: var(--rhino-dark-2);
+  box-shadow: inset 0px 0px 230px -4px rgba(196, 253, 184, 0.5);
 }
-
 
 /* Scrollbar */
 
 * {
-    scrollbar-width: thin;
-    scrollbar-color: var(--reef) var(--reef);
+  scrollbar-width: thin;
+  scrollbar-color: var(--reef) var(--reef);
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-    width: 14px;
+  width: 14px;
 }
 
 *::-webkit-scrollbar-track {
-    background: var(--rhino-dark-3);
+  background: var(--rhino-dark-3);
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: var(--reef);
-    border-radius: 20px;
-    border: 3px solid var(--rhino-dark-3);
+  background-color: var(--reef);
+  border-radius: 20px;
+  border: 3px solid var(--rhino-dark-3);
 }
 
 /* Form */
 
 .action-panel {
-    padding: 1rem;
-    background-color: var(--rhino-dark-4);
-    border: 2px solid var(--rhino-light-3);
-    border-radius: 0.65rem;
+  padding: 1rem;
+  background-color: var(--rhino-dark-4);
+  border: 2px solid var(--rhino-light-3);
+  border-radius: 0.65rem;
 }
 
 .form-title {
-    font-size: 4rem;
-    font-weight: 500;
-    color: var(--reef);
-    text-align: center;
+  font-size: 4rem;
+  font-weight: 500;
+  color: var(--reef);
+  text-align: center;
 }
 
 form label {
-    font-size: 2.25rem;
-    font-weight: 500;
-    color: var(--reef);
+  font-size: 2.25rem;
+  font-weight: 500;
+  color: var(--reef);
 }
 
 .form-container {
-    height: fit-content;
+  height: fit-content;
 }
 
 form {
-    display: grid;
-    height: 100%;
-    grid-template-rows: repeat(10, auto);
-    gap: 1rem;
+  display: grid;
+  height: 100%;
+  grid-template-rows: repeat(10, auto);
+  gap: 1rem;
 }
 
-input[type='text'],
-input[type='number'] {
-    padding: 0.8rem;
-    border-radius: 0.65rem;
-    border: 1px solid var(--rhino-light-2);
-    background: var(--rhino-dark-4);
-    width: 32rem;
-    outline: none;
-    color: white;
-    font-size: 2rem;
+input[type="text"],
+input[type="number"] {
+  padding: 0.8rem;
+  border-radius: 0.65rem;
+  border: 1px solid var(--rhino-light-2);
+  background: var(--rhino-dark-4);
+  width: 32rem;
+  outline: none;
+  color: white;
+  font-size: 2rem;
 }
 
-input[type='number'] {
-    width: 12rem;
+input[type="number"] {
+  width: 12rem;
 }
 
-input[type='radio'] {
-    box-sizing: border-box;
-    appearance: none;
-    background: var(--rhino-dark-3);
-    outline: 1px solid var(--reef);
-    border: 4px solid var(--rhino-dark-3);
-    width: 1.5rem;
-    height: 1.5rem;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+input[type="radio"] {
+  box-sizing: border-box;
+  appearance: none;
+  background: var(--rhino-dark-3);
+  outline: 1px solid var(--reef);
+  border: 4px solid var(--rhino-dark-3);
+  width: 1.5rem;
+  height: 1.5rem;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
-input[type='radio']:checked {
-    background: var(--reef);
+input[type="radio"]:checked {
+  background: var(--reef);
 }
 
 .radio-span label {
-    font-size: 1.8rem;
-    font-weight: 400;
+  font-size: 1.8rem;
+  font-weight: 400;
 }
 
 .input-label {
-    font-size: 2.2rem;
-    margin-bottom: -1rem;
+  font-size: 2.2rem;
+  margin-bottom: -1rem;
 }
 
-form>label:nth-child(1) {
-    margin-top: 2rem;
+form > label:nth-child(1) {
+  margin-top: 2rem;
 }
 
-form>label:nth-child(7) {
-    font-size: 2rem;
-    font-weight: 400;
-    font-style: italic;
-    margin-top: 1rem;
+form > label:nth-child(7) {
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: italic;
+  margin-top: 1rem;
 }
 
 form button {
-    width: 16rem;
-    height: 4rem;
-    font-size: 1.75rem;
-    font-weight: 600;
-    background-color: var(--rhino-dark-2);
-    color: var(--reef-dark-1);
-    border: 1px solid var(--reef);
-    border-radius: 0.65rem;
+  width: 16rem;
+  height: 4rem;
+  font-size: 1.75rem;
+  font-weight: 600;
+  background-color: var(--rhino-dark-2);
+  color: var(--reef-dark-1);
+  border: 1px solid var(--reef);
+  border-radius: 0.65rem;
 }
 
 form button:hover {
-    background-color: var(--rhino-dark-3);
-    color: var(--reef);
-    transition: 0.3s;
+  background-color: var(--rhino-dark-3);
+  color: var(--reef);
+  transition: 0.3s;
 }
 
 form button:active {
-    transform: translateY(5px);
-    background-color: var(--reef-dark-2);
-    color: var(--rhino);
-    transition: 0.05s ease-in-out;
+  transform: translateY(5px);
+  background-color: var(--reef-dark-2);
+  color: var(--rhino);
+  transition: 0.05s ease-in-out;
 }
-
-
 
 /* Footer */
 
 .footer {
-    grid-row: 3 / 4;
-    background-color: var(--rhino-dark-4);
-    border-top: 1px solid var(--rhino-light-3);
-    font-size: 2rem;
-    text-align: center;
-    color: var(--reef);
-    padding: 0.5rem;
-    display: grid;
-    grid-template-columns: 15rem 3rem;
-    align-content: center;
-    justify-content: center;
+  grid-row: 3 / 4;
+  background-color: var(--rhino-dark-4);
+  border-top: 1px solid var(--rhino-light-3);
+  font-size: 2rem;
+  text-align: center;
+  color: var(--reef);
+  padding: 0.5rem;
+  display: grid;
+  grid-template-columns: 15rem 3rem;
+  align-content: center;
+  justify-content: center;
 }
 
 .github-logo {
-    width: 2.25rem;
-    margin-top: 1px;
-    cursor: pointer;
-    transition: all 0.3s;
+  width: 2.25rem;
+  margin-top: 1px;
+  cursor: pointer;
+  transition: all 0.3s;
 }
 
 .github-logo:hover {
-    transform: scale(1.2) rotate(360deg);
+  transform: scale(1.2) rotate(360deg);
 }
 
 /* Media Queries */
 
 @media only screen and (max-width: 768px) {
-    .library-container {
-        grid-template-rows: 1fr 1fr;
-        width: 93vw;
-        row-gap: 1rem;
-    }
+  .library-container {
+    grid-template-rows: 1fr 1fr;
+    width: 93vw;
+    row-gap: 1rem;
+  }
 
-    .library-grid {
-        width: 95vw;
-        grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
-        gap: 1.8rem
-    }
+  .library-grid {
+    width: 95vw;
+    grid-template-columns: repeat(auto-fill, minmax(14rem, 1fr));
+    gap: 1.8rem;
+  }
 
-    .action-panel {
-        grid-row: 2 / 3;
-        width: 95vw;
-    }
+  .action-panel {
+    grid-row: 2 / 3;
+    width: 95vw;
+  }
 
-    .form-title {
-        font-size: 0;
-    }
+  .form-title {
+    font-size: 0;
+  }
 
-    .action-panel * {
-        padding: 0;
-    }
+  .action-panel * {
+    padding: 0;
+  }
 
-    form>label:nth-child(1) {
-        margin-top: 0;
-    }
+  form > label:nth-child(1) {
+    margin-top: 0;
+  }
 
-    .input-label {
-        font-size: 1.5rem;
-    }
+  .input-label {
+    font-size: 1.5rem;
+  }
 
-    .card {
-        height: min-content;
-        grid-template-rows: 7rem 3rem 3rem 1fr 2rem 4rem;
-        min-width: 14rem;
-    }
+  .card {
+    height: min-content;
+    grid-template-rows: 7rem 3rem 3rem 1fr 2rem 4rem;
+    min-width: 14rem;
+  }
 
-    .card h1 {
-        font-size: 2rem;
-    }
+  .card h1 {
+    font-size: 2rem;
+  }
 
-    .card h2 {
-        font-size: 1.25rem;
-    }
+  .card h2 {
+    font-size: 1.25rem;
+  }
 
-    form>label:nth-child(7) {
-        margin-top: 0;
-        font-size: 1.5rem;
-        font-weight: 500;
-    }
-
+  form > label:nth-child(7) {
+    margin-top: 0;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
 }
