--- a/style.css
+++ b/style.css
@@ -88,9 +88,9 @@ body {
 
 .header h1 {
     margin-left: 2rem;
-    font-size: 6rem;
-    color: var(--anti-flash-white);
-    font-weight: 300;
+    font-size: 2.5rem;
+    color: var(--pistachio);
+    font-weight: 800;
 }
 
 /* Library */
@@ -258,6 +258,20 @@ body {
     border: 2px solid var(--basil);
     border-top-right-radius: 0.65rem;
     border-bottom-right-radius: 0.65rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.page-counter {
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--pistachio);
+}
+
+#page-counter-number {
+    color: var(--mint);
+    font-weight: 500;
 }
 
 .form-title {
@@ -393,6 +407,8 @@ form button:active {
 .github-logo:hover {
     transform: scale(1.2) rotate(360deg);
 }
+
+
 
 /* Media Queries */
 
